--- a/admin/index.html
+++ b/admin/index.html
@@ -44,6 +44,6 @@
 <body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="bundle.js"></script>
+<script src="bundle.min.js"></script>
 </body>
 </html>
